docs: JMC jar built by Friday CI, vendor manifest with checksums and update check